--- a/aiwankeweb/aiwanke/static/aiwanke/css/aiwanke.css
+++ b/aiwankeweb/aiwanke/static/aiwanke/css/aiwanke.css
@@ -1,21 +1,39 @@
 /* GLOBAL STYLES
 -------------------------------------------------- */
 body {
-  margin: 0;
-  font-family: Tahoma,Arial,Helvetica,Arial,sans-serif;
-  font-size: 12px;
-  line-height: 20px;
-  color: #333;
-  background-color: #fff;
+    margin: 0;
+    font-family: Tahoma,Arial,Helvetica,Arial,sans-serif;
+    font-size: 12px;
+    line-height: 20px;
+    color: #333;
+    background-color: #fff;
+    /* Margin bottom by footer height */
+    margin-bottom: 60px;
 }
-/* index
+.footer {
+    position: absolute;
+    width: 100%;
+    /* Set the fixed height of the footer here */
+    height: 60px;
+    background-color: #f5f5f5;
+}
+.footer > .container {
+  padding-right: 15px;
+  padding-left: 15px;
+}
+.mt30, .mt-30 {
+    margin-top: 30px;
+}
+
+/* index Page
 -------------------------------------------------- */
 img.normalELogo {
-  width: 160px;
-  height: 80px;
+  width: 96px;
+  height: 96px;
 }
 .main{
-    padding-top: 48px;
+    padding-top: 54px;
+    margin-bottom: 20px;
 }
 .rookie .wrapp {
   width: 1130px;
@@ -64,28 +82,54 @@ img.normalELogo {
     overflow: hidden;
 }
 
-/* CUSTOMIZE THE CAROUSEL
+ /* Detail Page
 -------------------------------------------------- */
-
+.post-header .author {
+    margin-top: 10px;
+    color: #999;
+}
+.post-topheader .widget-action--ver {
+    margin-top: 10px;
+    color: #999;
+}
+.list-unstyled, .list-inline {
+    padding-left: 0;
+    list-style: none;
+}
+.widget-action--ver li:first-child {
+    margin-top: 0;
+    margin-bottom: 3px;
+}
+.app_line_border {
+    margin-top: 1px;
+    height: 1px;
+    overflow: hidden;
+    background-color: #d2d2d2;
+}
 /* Carousel base class */
 .carousel {
-  height: 500px;
-  margin-bottom: 60px;
+    height: 350px;
+    width: 400px;
+    margin: 10px auto 60px;
 }
 /* Since positioning the image, we need to help out the caption */
 .carousel-caption {
-  z-index: 10;
+    z-index: 10;
 }
-
 /* Declare heights because of positioning of img element */
 .carousel .item {
-  height: 500px;
-  background-color: #777;
+    height: 350px;
+    background-color: #777;
 }
 .carousel-inner > .item > img {
-  position: absolute;
-  top: 0;
-  left: 0;
-  min-width: 100%;
-  height: 500px;
+    position: absolute;
+    top: 0;
+    left: 0;
+    min-width: 100%;
+    height: 350px;
 }
+.app_comment_box {
+    padding: 20px 0px 10px 0px;
+    color: #333333;
+}
+
