--- a/aiwankeweb/aiwanke/templates/aiwanke/detail.html
+++ b/aiwankeweb/aiwanke/templates/aiwanke/detail.html
@@ -1,34 +1,77 @@
 {% extends "aiwanke/base.html" %}
+{% load static %}
 {% block main_content %}
-    <div id="hotapps" class="carousel slide" data-ride="carousel">
-        <!-- Indicators -->
-        <ol class="carousel-indicators">
-            {% for game in latest_game_list %}
-                <li data-target="#hotapps" data-slide-to="{{ forloop.counter0 }}" class="{% if forloop.first %}active{% endif %}"></li>
-            {% endfor %}
-        </ol>
-        <div class="carousel-inner" role="listbox">
-            {% for game in latest_game_list %}
-                <div class="item{% if forloop.first %} active{% endif %}{% if not forloop.last %} left{% endif %}">
-                    <img src="{{ game.iconUrl }}" alt="{{ game.appName }}">
-                    <div class="container">
-                        <div class="carousel-caption">
-                            <h1>{{ game.appName }}</h1>
-                            <p>{{ game.desc }}</p>
-                            <p><a class="btn btn-lg btn-primary" href="{% url 'aiwanke:detail' game.id %}" role="button">点击查看</a></p>
-                        </div>
+    <div class="container main">
+        <div class="post-header">
+            <div class="row">
+                <div class="col-md-7">
+                    <h3 id="gameName" data-id="{{ object.id }}">
+                        <a href="{% url 'aiwanke:detail' object.id %}">{{ object.appName }}</a>
+                    </h3>
+                    <div class="author">
+                        {{ object.author_name }}&nbsp;&nbsp;{{ object.category_name }}&nbsp;&nbsp;{{ object.create_time }}
                     </div>
                 </div>
-            {% endfor %}
+                <div class="col-md-5">
+                    <ul class="widget-action--ver list-unstyled">
+                            <li>
+                                <button type="button" id="sideFollow" class="btn btn-success btn-sm"
+                                        data-placement="right" data-original-title="关注后将获得更新提醒">关注</button>
+                                <strong>0</strong> 关注
+                            </li>
+                            <li>
+                                <button type="button" id="sideBookmark" class="btn btn-default btn-sm" >收藏</button>
+                                <strong id="sideBookmarked">0</strong> 收藏，<strong class="no-stress">0</strong> 浏览
+                            </li>
+                        </ul>
+                </div>
+            </div>
         </div>
-        <a class="left carousel-control" href="#hotapps" role="button" data-slide="prev">
-            <span class="glyphicon glyphicon-chevron-left" aria-hidden="true"></span>
-            <span class="sr-only">Previous</span>
-        </a>
-        <a class="right carousel-control" href="#hotapps" role="button" data-slide="next">
-            <span class="glyphicon glyphicon-chevron-right" aria-hidden="true"></span>
-            <span class="sr-only">Next</span>
-        </a>
+        <div class="container">
+            <div class="row">
+                <div class="col-xs-12 col-md-7">
+                    <div id="appScreenTip">
+                        <h4>屏幕截图({{ object.screenshots.all|length }}张)</h4>
+                        <div class="app_line_border"></div>
+                    </div>
+                    <div id="covers" class="carousel slide" data-ride="carousel">
+                        <!-- Indicators -->
+                        <ol class="carousel-indicators">
+                            {% for img in object.screenshots.all %}
+                                <li data-target="#covers" data-slide-to="{{ forloop.counter0 }}" class="{% if forloop.first %}active{% endif %}"></li>
+                            {% endfor %}
+                        </ol>
+                        <div class="carousel-inner" role="listbox">
+                            {% for img in object.screenshots.all %}
+                                <div class="item{% if forloop.first %} active{% endif %}">
+                                    <img src="{% get_media_prefix %}{{ img.picture }}" alt="{{ object.appName }}">
+                                    {% comment %}<div class="container">
+                                        <div class="carousel-caption">
+                                            <h1>{{ object.appName }}</h1>
+                                            <p>{{ object.desc }}</p>
+                                        </div>
+                                    </div>{% endcomment %}
+                                </div>
+                            {% endfor %}
+                        </div>
+                    </div>
+                    <div class="app_line_border"></div>
+                    <div id="appDescription">
+                        <div class="font16">
+                            <span class="sr-only">{{ object.appName }}</span>
+                            <h4>软件介绍</h4>
+                        </div>
+                        <div class="font12">
+                            {{ object.desc }}
+                        </div>
+                        <div class="app_line_border"></div>
+                    </div>
+
+                </div>
+                <div class="col-xs-12 col-md-5"></div>
+            </div>
+        </div>
     </div>
-     {{ object.appName }}
+
+
 {% endblock %}
