--- a/aiwankeweb/aiwanke/templates/aiwanke/index.html
+++ b/aiwankeweb/aiwanke/templates/aiwanke/index.html
@@ -1,5 +1,6 @@
 {% extends "aiwanke/base.html" %}
 {% load aiwanke %}
+{% load static %}
 {% block title %}爱玩客-游戏列表{% endblock %}
 
 {% block main_content %}
@@ -12,7 +13,8 @@
                     <li class="{% if forloop.counter0|divisibleby:4 %}nomargin{% endif %}">
                         <h3>
                             <a href="{% url 'aiwanke:detail' game.id %}" target="_blank">
-                                <img src="{{ game.iconUrl }}" class="normalELogo" alt="{{ game.appName }}">
+                                {% comment %}<img src="{{ game.iconUrl }} " class="normalELogo" alt="{{ game.appName }}">{% endcomment %}
+                                <img src="{% get_media_prefix %}{{ game.iconUrl }}" class="normalELogo" alt="{{ game.appName }}">
                             </a>
                             <p>{{ game.appName }}</p>
                         </h3>
@@ -35,5 +37,4 @@
         </ul>
     </nav>
     </div>
-
 {% endblock %}
